--- a/index.html
+++ b/index.html
@@ -30,6 +30,60 @@
             </div>  
         </div>      
     </nav>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <div class="my-5 container-fluid row">
+
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+    </div>
+    <div class="my-5 container-fluid row">
+
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+    </div>
+    <div class="my-5 container-fluid row">
+
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+             <div class="card col-4 p-0">
+                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>  
+             </div>
+    </div>
 </body>
 </html> 
