--- a/index.html
+++ b/index.html
@@ -1,89 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FeedIg</title>
-
+  <meta charset="utf-8">
+  <title>Instagram Explore Grid</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .grid-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      aspect-ratio: 1 / 1; /* cuadrado perfecto */
+    }
+  </style>
 </head>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/45da215b01.js" crossorigin="anonymous"></script>
 <body>
-    <nav class="navbar navbar-light bg-light justify-content-between px-4">
-        <a class="navbar-brand"><i class="bi bi-instagram"></i> Instagram</a>
-        <div class="d-flex ms-auto gap-2">
-        <button class="btn btn-success">Create a new post</button>
-        
-            <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa-solid fa-gear"></i>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><a class="dropdown-item" href="#">Accesibility</a></li>
-                <li><a class="dropdown-item" href="#">Privacy and data</a></li>
-                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger">log out</a></li>
-            </ul>
-            
-            </div>  
-        </div>      
-    </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <div class="my-5 container-fluid row">
 
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-    </div>
-    <div class="my-5 container-fluid row">
+<!-- Navbar -->
+<nav class="navbar navbar-light bg-light justify-content-between px-3">
+  <a class="navbar-brand" href="#">📷 Instagram</a>
+  <div>
+    <button class="btn btn-success me-2">Create a new post</button>
+    <button class="btn btn-secondary">⚙️</button>
+  </div>
+</nav>
 
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-    </div>
-    <div class="my-5 container-fluid row">
+<!-- View Mode Buttons (Mockup) -->
+<div class="container text-center my-3">
+  <button class="btn btn-outline-primary me-2">🔲</button>
+  <button class="btn btn-outline-secondary">⬛</button>
+</div>
 
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
-             <div class="card col-4 p-0">
-                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
-                <div class="card-body">
-                </div>  
-             </div>
+<!-- Image Grid -->
+<div class="container">
+  <div class="row g-2">
+    <!-- Repeat this col for each image -->
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/237/600/600" class="grid-img" alt="Image">
     </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1025/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1015/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1005/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1011/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1003/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1012/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1019/600/600" class="grid-img" alt="Image">
+    </div>
+    <div class="col-12 col-sm-6 col-md-4">
+      <img src="https://picsum.photos/id/1020/600/600" class="grid-img" alt="Image">
+    </div>
+  </div>
+</div>
+
 </body>
-</html> 
+</html>
