--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Instagram Explore Grid</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/45da215b01.js" crossorigin="anonymous"></script>
   <style>
     .grid-img {
       width: 100%;
@@ -17,14 +18,30 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-light bg-light justify-content-between px-3">
-  <a class="navbar-brand" href="#">📷 Instagram</a>
-  <div>
-    <button class="btn btn-success me-2">Create a new post</button>
-    <button class="btn btn-secondary">⚙️</button>
+<nav class="navbar navbar-light bg-light justify-content-between px-5">
+  <a class="navbar-brand" href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
+  <div class="dropdown">
+      <button class="btn btn-success me-2">Create a new post</button>
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <i class="fa-solid fa-gear"></i>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li><a class="dropdown-item" href="#">Accesibility</a></li>
+        <li><a class="dropdown-item" href="#">Privacity</a></li>
+      </ul>
   </div>
 </nav>
-
+<!--<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>-->
 <!-- View Mode Buttons (Mockup) -->
 <div class="container text-center my-3">
   <button class="btn btn-outline-primary me-2">🔲</button>
@@ -65,5 +82,6 @@
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
