--- a/index.html
+++ b/index.html
@@ -2,57 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Instagram Explore Grid</title>
+  <title>feed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/45da215b01.js" crossorigin="anonymous"></script>
-  <style>
+  <!--<style>
     .grid-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       aspect-ratio: 1 / 1; /* cuadrado perfecto */
     }
-  </style>
+  </style>-->
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-light bg-light justify-content-between px-5">
-  <a class="navbar-brand" href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
-  <div class="dropdown">
-      <button class="btn btn-success me-2">Create a new post</button>
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      <i class="fa-solid fa-gear"></i>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><a class="dropdown-item" href="#">Accesibility</a></li>
-        <li><a class="dropdown-item" href="#">Privacity</a></li>
-      </ul>
-  </div>
-</nav>
-<!--<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropdown button
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-  </ul>
-</div>-->
-<!-- View Mode Buttons (Mockup) -->
+
+    <nav class="navbar navbar-light bg-light justify-content-between px-5">
+      <a class="navbar-brand" href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
+      <div class="dropdown position">
+              <button class="btn btn-success me-2">Create a new post</button>
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-gear"></i>
+            </button>
+          <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Accesibility</a></li>
+              <li><a class="dropdown-item" href="#">Privacity</a></li>
+          </ul>
+      </div>
+    </nav>
+
 <div class="container text-center my-3">
   <button class="btn btn-outline-primary me-2">🔲</button>
   <button class="btn btn-outline-secondary">⬛</button>
 </div>
 
 <!-- Image Grid -->
-<div class="container">
+<div class="my-5 container row">
   <div class="row g-2">
-    <!-- Repeat this col for each image -->
-    <div class="col-12 col-sm-6 col-md-4">
+
+    <div class="card col-4 p-0">
       <img src="https://picsum.photos/id/237/600/600" class="grid-img" alt="Image">
     </div>
     <div class="col-12 col-sm-6 col-md-4">
