--- a/index.html
+++ b/index.html
@@ -38,36 +38,57 @@
   <button class="btn btn-outline-secondary">⬛</button>
 </div>
 
-<!-- Image Grid -->
-<div class="my-5 container row">
-  <div class="row g-2">
 
-    <div class="card col-4 p-0">
-      <img src="https://picsum.photos/id/237/600/600" class="grid-img" alt="Image">
+<div class="container-fluid my-5">
+  <div class="row">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1025/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300/300/sepia?id=4" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1015/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300/300/sepia?id=6" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1005/600/600" class="grid-img" alt="Image">
+  </div>
+  <div class="row">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300/300?r" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1011/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://picsum.photos/300?grayscale" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1003/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://picsum.photos/300/?blur=2" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1012/600/600" class="grid-img" alt="Image">
+  </div>
+    <div class="row">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300/300?random" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1019/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://placedog.net/300/300?r" class="card-img-top">
+      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="https://picsum.photos/id/1020/600/600" class="grid-img" alt="Image">
+    <div class="col-md-4 p-1">
+      <div class="card">
+        <img src="https://picsum.photos/id/870/300/300?grayscale&blur=2" class="card-img-top">
+      </div>
     </div>
   </div>
 </div>
