--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/45da215b01.js" crossorigin="anonymous"></script>
-  <!--<style>
-    .grid-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      aspect-ratio: 1 / 1; /* cuadrado perfecto */
-    }
-  </style>-->
 </head>
 <body>
 
@@ -29,14 +21,25 @@
               <li><a class="dropdown-item" href="#">Profile</a></li>
               <li><a class="dropdown-item" href="#">Accesibility</a></li>
               <li><a class="dropdown-item" href="#">Privacity</a></li>
+              <li><hr></li>
+              <li><a class="dropdown-item text-danger" href="#">Log out</a></li>
           </ul>
       </div>
     </nav>
 
-<div class="container text-center my-3">
-  <button class="btn btn-outline-primary me-2">🔲</button>
-  <button class="btn btn-outline-secondary">⬛</button>
-</div>
+        <ul class="nav nav-pills justify-content-center my-3" id="viewTabs" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="grid-tab" data-bs-toggle="tab" data-bs-target="#gridView" type="button" role="tab">
+            
+            <i class="fa-solid fa-table-cells"></i>
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="list-tab" data-bs-toggle="tab" data-bs-target="#listView" type="button" role="tab">
+              <a href="secondpg.html">⬛</a>
+            </button>
+          </li>
+        </ul>
 
 
 <div class="container-fluid my-5">
